# stud

.obsidian/: workspace.json
backend-roadmap/: .gitignore  pyproject.toml  sandbox.py
backend-roadmap/app/: config.py  create_all.py  create_mix.py  create_task.py  database.py  exceptions.py  main.py  models.py  schemas.py  shemas.py  utils.py
backend-roadmap/app/models/: task.py  user.py
backend-roadmap/app/routers/: bookmarks.py  notes.py  projects.py
backend-roadmap/notes/: glossary.md
backend-roadmap/scripts/: identity_playground.py
backend-roadmap/src/foundation/: identity.py
backend-roadmap/tests/: test_identity.py  test_schemas.py  test_utils.py
